# CI-CDNet-Test

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
